--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,39 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/main.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "public/**/*",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "api/main.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "public/$1"
-    }
-  ]
+    "version": 2,
+    "builds": [
+        {
+            "src": "api/main.py",
+            "use": "@vercel/python"
+        },
+        {
+            "src": "public/index.html",
+            "use": "@vercel/static"
+        },
+        {
+            "src": "public/script.js",
+            "use": "@vercel/static"
+        },
+        {
+            "src": "public/styles.css",
+            "use": "@vercel/static"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "/api/main.py"
+        },
+        {
+            "src": "/script.js",
+            "dest": "/public/script.js"
+        },
+        {
+            "src": "/styles.css",
+            "dest": "/public/styles.css"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/public/index.html"
+        }
+    ]
 }
