--- a/vercel.json
+++ b/vercel.json
@@ -20,7 +20,7 @@
     ],
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "api/(.*)",
             "dest": "/api/main.py"
         },
         {
