Miner changes in render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -2,13 +2,13 @@ services:
   - type: web
     name: akgec-chatbot
     env: python
-    plan: free # Optional, use the free instance type
+    plan: free
     buildCommand: "pip install -r requirements.txt"
     startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
     envVars:
       - key: PYTHON_VERSION
         value: 3.9
+      # Render will prompt you to add the values for these keys
+      # in the dashboard, where they will be stored as secrets.
       - key: GROQ_API_KEY
-        fromSecret: true # Tells Render to use a secret variable
       - key: PC_API_KEY
-        fromSecret: true # Tells Render to use a secret variable
